# backend/src/student/student.controller.ts
@@ -8,43 +8,54 @@ import {
   Delete,
   HttpCode,
   HttpStatus,
+  UseGuards,
 } from '@nestjs/common';
 import { StudentService } from './student.service';
 import { CreateStudentDto } from './dto/create-student.dto';
 import { UpdateStudentDto } from './dto/update-student.dto';
+import { JwtAuthGuard } from '../auth/jwt-auth.guard';
+import { RolesGuard } from '../auth/roles.guard';
+import { Roles } from '../decorators/roles.decorator';
 
 @Controller('student')
+@UseGuards(JwtAuthGuard, RolesGuard)
 export class StudentController {
   constructor(private readonly studentService: StudentService) {}
 
   @Post()
+  @Roles('admin')
   create(@Body() createStudentDto: CreateStudentDto) {
     return this.studentService.create(createStudentDto);
   }
 
   @Get()
+  @Roles('admin', 'student')
   findAll() {
     return this.studentService.findAll();
   }
 
   @Get(':id')
+  @Roles('admin', 'student')
   findOne(@Param('id') id: string) {
     return this.studentService.findOne(Number(id));
   }
 
   @Get('email/:email')
+  @Roles('admin', 'student')
   findByEmail(@Param('email') email: string) {
     return this.studentService.findByEmail(email);
   }
 
   @Patch(':id')
+  @Roles('admin', 'student')
   update(@Param('id') id: string, @Body() updateStudentDto: UpdateStudentDto) {
-    return this.studentService.update(Number(id), updateStudentDto);
+    return this.studentService.update(+id, updateStudentDto);
   }
 
   @Delete(':id')
+  @Roles('admin')
   @HttpCode(HttpStatus.NO_CONTENT)
   remove(@Param('id') id: string) {
-    return this.studentService.remove(Number(id));
+    return this.studentService.remove(+id);
   }
 }
